Small correction to howto on bamboo